--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "version": "1.0.0",
   "name": "displayWebSite",
-  "description": "展示型网站",
   "author": "1558581187@qq.com",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.dev.js",
+    "start": "webpack-dev-server --open --config build/webpack.dev.js"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
+    "vue-loader": "^13.0.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
+  },
+  "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2"
   }
 }
